fix cell layout issue

--- a/Plum/FirstAidList.plist
+++ b/Plum/FirstAidList.plist
@@ -7,7 +7,7 @@
 		<dict>
 			<key>Symtoms</key>
 			<array>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
 			</array>
 			<key>Methods</key>
 			<array>
@@ -23,9 +23,9 @@
 		<dict>
 			<key>Symtoms</key>
 			<array>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
 			</array>
 			<key>Methods</key>
 			<array>
@@ -41,7 +41,7 @@
 		<dict>
 			<key>Symtoms</key>
 			<array>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
 			</array>
 			<key>Methods</key>
 			<array>
@@ -59,8 +59,8 @@
 		<dict>
 			<key>Symtoms</key>
 			<array>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
-				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
+				<string>Wounds may have congestion, swelling and pain. Severe fractures may cause limb deformities, or open wounds. Severe fractures may cause limb deformities, or open wounds.</string>
 			</array>
 			<key>Methods</key>
 			<array>
